--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,6 @@ body {
     font-family: Roboto, sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: var(--dark-text-secondary);
-}
-
 .hero-main {
     font-size: 48px;
     font-weight: 900;
@@ -24,7 +19,6 @@ a {
 
 .hero-secondary {
     font-size: 18px;
-    font-weight: 500;
     color: var(--dark-text-secondary);
 }
 
@@ -42,14 +36,24 @@ a {
 
 .nav {
     display: flex;
+    justify-content: center;
+    background-color: var(--dark-blue);
+}
+
+.nav-container {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--dark-blue);
     padding: 16px;
+    width: 1000px;
 }
 
 .nav-items {
     display: flex;
     justify-content: space-between;
-    gap: 16px;
+    gap: 32px;
+}
+
+.nav-items a {
+    text-decoration: none;
 }
