--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,54 @@ body {
     border-radius: 8px;
     border: none;
 }
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    padding: 64px 16px;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
+
+.info-header {
+    font-size: 36px;
+    font-weight: 800;
+    color: var(--dark-blue);
+}
+
+.info-cards {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 48px;
+}
+
+.info-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 180px;
+    gap: 8px;
+    flex: 1;
+}
+
+.info-image {
+    display: flex;
+    width: 180px;
+    height: 180px;
+    border: 2px solid var(--accent);
+    border-radius: 16px;
+    flex: 1 1 auto;
+}
+
+.info-message {
+    text-align: center;
+    width: 180px;
+}
