Create quote section
This one was an easier section, which made use of the actual section
that was created to wrap the quote container. It could be that
these explicit sections are needed so I can center align the content
and ensure appropriate padding around the content in smaller viewports.

--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,6 @@ body {
     color: var(--dark-text);
 }
 
-.quote {
-    font-size: 36px;
-    font-weight: 300;
-    font-style: italic;
-}
-
 .nav {
     display: flex;
     justify-content: center;
@@ -65,7 +59,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 64px 16px;
+    padding: 128px 16px;
     background-color: var(--dark-blue);
 }
 
@@ -106,7 +100,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: stretch;
-    padding: 64px 16px;
+    padding: 128px 16px;
 }
 
 .info-container {
@@ -151,4 +145,33 @@ body {
 .info-message {
     text-align: center;
     width: 180px;
+}
+
+.quote {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    background-color: var(--dark-text-secondary);
+    padding: 128px 16px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 800px;
+    gap: 16px;
+}
+
+.quote-message {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    align-self: start;
+}
+
+.quote-attr {
+    font-size: 18px;
+    font-weight: 600;
+    align-self: end;
 }
